--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>webseries</h1>
+     <img src="https://dumba.co.in/vootflix_admin/images/89925_WEB-SERIES.png" height="300" width="500" alt="">
 </body>
 </html>
