--- a/scam1992.html
+++ b/scam1992.html
@@ -6,6 +6,6 @@
     <title>SCAM 1992</title>
 </head>
 <body>
-    <a href="https://rumble.com/c/c-3869770"></a>
+    <a href="https://rumble.com/c/c-3869770">SCAM 1992</a>
 </body>
 </html>
