--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>webseries</h1>
      <img src="https://dumba.co.in/vootflix_admin/images/89925_WEB-SERIES.png" height="300" width="500" alt="">
-     <a href="./scam1992.html">scam 1992</a>
+     <a href="./website.html">click here to watch web series</a>
 </body>
 </html>
