--- a/website.html
+++ b/website.html
@@ -9,7 +9,7 @@
     <a href="./scam1992.html" target="_blank"> <h1>SCAM 1992</h1></a>
     <a href="./scam1992.html" target="_blank"> <img  src="./images (3).jpeg"></a>
     <hr>
-    <a href=""><h1>MONEY HEIST</h1></a>
-    <a href=""><img src="./money hiest.jpeg"></a>
+    <a href="./money heist.html"><h1>MONEY HEIST</h1></a>
+    <a href="./money heist.html"><img src="./money hiest.jpeg"></a>
 </body>
 </html>
